// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportButton opens modal when clicking the button 1`] = `
<div
  data-testid="Modal"
>
  <button
    class="float-right"
    type="button"
  >
    X
  </button>
  <div>
    <div
      data-testid="DBImportButton"
    />
  </div>
</div>
`;

exports[`ImportButton renders hidden modal on mount 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <button
      class="float-right"
      type="button"
    >
      X
    </button>
    <div>
      <div
        data-testid="DBImportButton"
      />
    </div>
  </div>
  <button
    class="btn btn-primary"
    id="import-button"
    type="button"
  >
    <svg
      class="inline-block align-middle mr-1"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 18 4-5h-3V2h-2v11H8z"
      />
      <path
        d="M19 9h-4v2h4v9H5v-9h4V9H5c-1.103 0-2 .897-2 2v9c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-9c0-1.103-.897-2-2-2z"
      />
    </svg>
    <span
      class="inline-block align-middle"
    >
      Import
    </span>
  </button>
</div>
`;
